slider is added

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Main</title>
+	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/style.css">
-
+	<link href="js/style_s.css" rel="stylesheet" />
 </head>
 <body>
 	<section class="main_menu">
@@ -19,7 +20,22 @@
 		</div>
 	</section>
 	<section class="logo_section">
-		
+		<div class="center">
+			<a href="/" class="logo"><img src="img/logo-3.png" alt="Logo"></a>
+		</div>
 	</section>
+	<section class="slider">
+		<div id="slider-wrap" class="center">
+			<div id="slider">
+				<div class="slide"> <img src="img/slide_1.jpg"></div>	
+				<div class="slide"><img src="img/slide_2.jpg"></div>	
+				<div class="slide"><img src="img/slide_3.jpg"></div>	
+			</div>
+		</div>
+	</section>
+	<script src="js/slick.js"></script>
+	<script src="js/scripts.js"></script>
+	<script src="js/jquery-1.7.2.min.js"></script>
+	<script src="js/script_s.js"></script>
 </body>
 </html>
