3 boxes are added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<a href="/" class="logo"><img src="img/logo-3.png" alt="Logo"></a>
 		</div>
 	</section>
-	<section class="slider">
+	<section class="slider" class="center" >
 		<div id="slider-wrap" class="center">
 			<div id="slider">
 				<div class="slide"> <img src="img/slide_1.jpg"></div>	
@@ -33,7 +33,32 @@
 			</div>
 		</div>
 	</section>
-	<script src="js/slick.js"></script>
+	<section class="triggers" class="center" >
+		<div class="center">
+			<ul>
+				<li>
+					<div class="bl">
+						<img src="img/3.png">
+						<div class="trig_title"><ins>Delivery</ins></div>
+						<p>We can easily deliver our products in the specified perimeter, if you are in other city of Kazakhstan, you may use paid version of delivery</p>
+					</div>
+				</li>
+				<li>
+						<div class="bl">
+						<img src="img/2.png">
+						<div class="trig_title"><ins>Suggest</ins></div>
+						<p>we are open to suggestions. Our clients can provide their design, and according to those desigs we make orders</p>
+						</div>
+				</li>
+				<li>
+						<div class="bl">
+						<img src="img/1.png">
+						<div class="trig_title"><ins>Best price</ins></div>
+						<p>We have affordable price to our products. Also, all prices for goods correspond to quality </p>
+					</div>
+				</li>
+		</div>
+	</section>
 	<script src="js/scripts.js"></script>
 	<script src="js/jquery-1.7.2.min.js"></script>
 	<script src="js/script_s.js"></script>
