--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<a href="#">About</a>
 				<a href="#">Products</a>
 				<a href="#">Order</a>
-				<a href="#">Contucts</a>
+				<a href="#">Contacts</a>
 			</nav>
 		</div>
 	</section>
@@ -57,6 +57,12 @@
 						<p>We have affordable price to our products. Also, all prices for goods correspond to quality </p>
 					</div>
 				</li>
+		</div>
+	</section>
+	<section class="to_action">
+		<div class="center">
+			<a href="">+7 (727) 345 65 78</a>
+			<p>CALL NOW!</p>
 		</div>
 	</section>
 	<script src="js/scripts.js"></script>
