--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
 	<section class="main_menu">
 		<div class="center">
 			<nav>
-				<a class="active" href="#">Home</a>
-				<a href="#">About</a>
+				<a href="#">Home</a>
+				<a class="active" href="#">About</a>
 				<a href="#">Products</a>
 				<a href="#">Order</a>
 				<a href="#">Contacts</a>
@@ -35,10 +35,47 @@
 				<p> For the truly enterprising entrepreneur, develop a website that features knit clothing products for sale, as well as a custom made-to-order service where site visitors could simply fill out an order form for the size and style of knit products they want.</p>
 			</div>
 			<div class="right">
+				<h2>Why Choose Us</h2>
+				<ol>
+					<li>
+						<span>fsdgfhjshsf</span>
+						<p>Purling comes in handy, too, if you're knitting your sweater flat or if it has ribbing or a textured stitch pattern.</p>
+					</li>
+					<li>
+						<span>mnbvcxnvncxbvnx</span>
+						<p>Purling comes in handy, too, if you're knitting your sweater flat or if it has ribbing or a textured stitch pattern.</p>
+					</li>
+					<li>
+						<span>sjfhjdkfhsdkjfhsdfkjsdh</span>
+						<p>Depending on whether your sweater is knit top down or bottom up, you'll need to know the basics of increasing and decreasing, too.</p>
+					</li>
+					<li>
+						<span>sjfhjdkfhsdkjfhsdfkjsdh</span>
+						<p>Depending on whether your sweater is knit top down or bottom up, you'll need to know the basics of increasing and decreasing, too.</p>
+					</li>		
+				</ol>
 			</div>
 		</div>
 	</section>
-
+	<section class="testimonials">
+		<section class="center">
+			<h2>Testimonials</h2>
+			<ul>
+				<li>
+					<p>"Once you've taken all the time needed to get gauge and knit all the pieces your sweater requires, take a little more time to sew your seams properly."</p>
+					<span>Person A</span>
+				</li>
+				<li>
+					<p>"Once you've taken all the time needed to get gauge and knit all the pieces your sweater requires, take a little more time to sew your seams properly."</p>
+					<span>Person B</span>
+				</li>
+				<li>
+					<p>"Once you've taken all the time needed to get gauge and knit all the pieces your sweater requires, take a little more time to sew your seams properly."</p>
+					<span>Person C</span>
+				</li>
+			</ul>
+		</section>
+	</section>
 	<section class="to_action">
 		<div class="center">
 			<a href="">+7 (727) 345 65 78</a>
