--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Main</title>
+	<title>About</title>
 	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link href="js/style_s.css" rel="stylesheet" />
@@ -11,9 +11,9 @@
 	<section class="main_menu">
 		<div class="center">
 			<nav>
-				<a href="#">Home</a>
-				<a class="active" href="#">About</a>
-				<a href="#">Products</a>
+				<a href="index.html">Home</a>
+				<a class="active" href="about.html">About</a>
+				<a href="products.html">Products</a>
 				<a href="#">Order</a>
 				<a href="#">Contacts</a>
 			</nav>
