--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 				<a class="active" href="about.html">About</a>
 				<a href="products.html">Products</a>
 				<a href="#">Order</a>
-				<a href="#">Contacts</a>
+				<a href="contacts.html">Contacts</a>
 			</nav>
 		</div>
 	</section>
