--- a/order.html
+++ b/order.html
@@ -24,27 +24,17 @@
 		<div class="center">
 			<a href="/" class="logo"><img src="img/logo-3.png" alt="Logo"></a>
 		</div>
-	</section>
-	<section class="products">
+	</section>	
+	<section class="popular">
 		<div class="center">
-			<h2>Handmade things</h2>
-			<ul>
-				<li><a class="fancy" href="img/1_big.jpg"><img src="img/1.jpg"></a></li>
-				<li><a class="fancy" href="img/2_big.jpg"><img src="img/2.jpg"></a></li>
-				<li><a class="fancy" href="img/3_big.jpg"><img src="img/3.jpg"></a></li>
-			</ul>
-			<h2>Gloves</h2>
-			<ul>
-				<li><a class="fancy" href="img/4_big.jpg"><img src="img/4.jpg"></a></li>
-				<li><a class="fancy" href="img/5_big.jpg"><img src="img/5.jpg"></a></li>
-				<li><a class="fancy" href="img/6_big.jpeg"><img src="img/6.jpeg"></a></li>
-			</ul>
-			<h2>Clothes for baby</h2>
-			<ul>
-				<li><a class="fancy" href="img/1_big.jpg"><img src="img/7.jpg"></a></li>
-				<li><a class="fancy" href="img/1_big.jpg"><img src="img/8.jpg"></a></li>
-				<li><a class="fancy" href="img/1_big.jpg"><img src="img/9.jpg"></a></li>
-			</ul>
+			<h2 class="h2"><span>P</span>roducts <span>A</span>vailable</h2>
+			<div class="tab_btns">
+				<a href="#" class="active"><img src="img/l1.png"></a>
+				<a href="#"><img src="img/l2.png"></a>
+				<a href="#"><img src="img/l3.png"></a>
+				<a href="#"><img src="img/l4.png"></a>
+				<a href="#"><img src="img/l5.png"></a>
+			</div>
 		</div>
 	</section>
 	<section class="to_action">
