some modifications are done

--- a/order.html
+++ b/order.html
@@ -28,12 +28,19 @@
 	<section class="popular">
 		<div class="center">
 			<h2 class="h2"><span>P</span>roducts <span>A</span>vailable</h2>
-			<div class="tab_btns">
+			<div class="pop_tab_btns">
 				<a href="#" class="active"><img src="img/l1.png"></a>
 				<a href="#"><img src="img/l2.png"></a>
 				<a href="#"><img src="img/l3.png"></a>
 				<a href="#"><img src="img/l4.png"></a>
 				<a href="#"><img src="img/l5.png"></a>
+			</div>
+			<div class="pop_all_tabs_block">
+				<ul>
+					<li>
+						
+					</li>
+				</ul>
 			</div>
 		</div>
 	</section>
