Changes to order page are made

--- a/order.html
+++ b/order.html
@@ -27,7 +27,7 @@
 	</section>	
 	<section class="popular">
 		<div class="center">
-			<h2 class="h2"><span>P</span>roducts <span>A</span>vailable</h2>
+			<h2 class="h2" style="font-weight:bold;"><span>P</span>roducts <span>A</span>vailable</h2>
 			<div class="pop_tab_btns">
 				<a href="#" class="active"><img src="img/l1.png"></a>
 				<a href="#"><img src="img/l2.png"></a>
@@ -38,7 +38,331 @@
 			<div class="pop_all_tabs_block">
 				<ul>
 					<li>
-						
+						<div class="pop_main_goods_left">
+							<div class="pop_gallery">
+								<div class="pop_gallery_main">
+									<img src="img/order/p1.jpg">
+									<img src="img/order/p1_1.jpg">
+									<img src="img/order/p1_2.jpg">
+								</div>
+								<div class="pop_gallery_prev">
+									<span><img src="img/order/p1.jpg"></span>
+									<span><img src="img/order/p1_1.jpg"></span>
+									<span><img src="img/order/p1_2.jpg"></span>
+								</div>
+							</div>
+						</div>
+						<div class="pop_main_goods_right">
+							<div class="pop_goods_title">Red New Year Sweaters</div>
+							<div class="pop_goods_price">price:<span>10 000KZT</span></div>
+							<div class="pop_goods_char">
+								<span>Red, comfartable sweaters</span>
+								<span>Can be ordered for man and woman</span>
+							</div>
+							<div class="soc">
+								<a href="#"><img src="img/icc.png"></a>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">Cute Sweater</div>
+						<div class="pop_goods_price">price:<span>12000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p4.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">Water energy sweater</div>
+						<div class="pop_goods_price">price:<span>11000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p6.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">"For Feminine"Sweater</div>
+						<div class="pop_goods_price">price:<span>15000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p3.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">"Happy smile" Sweater</div>
+						<div class="pop_goods_price">price:<span>10000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p2.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">Cute Pink Sweater</div>
+						<div class="pop_goods_price">price:<span>10500</span></div>
+						<div class="pop_goods_img"><img src="img/order/p7.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">Classic Sweater</div>
+						<div class="pop_goods_price">price:<span>11000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p5.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+				</ul>
+				<ul>
+					<li>
+						<div class="pop_main_goods_left">
+							<div class="pop_gallery">
+								<div class="pop_gallery_main">
+									<img src="img/order/p1.jpg">
+									<img src="img/order/p1_1.jpg">
+									<img src="img/order/p1_2.jpg">
+								</div>
+								<div class="pop_gallery_prev">
+									<span><img src="img/order/p1.jpg"></span>
+									<span><img src="img/order/p1_1.jpg"></span>
+									<span><img src="img/order/p1_2.jpg"></span>
+								</div>
+							</div>
+						</div>
+						<div class="pop_main_goods_right">
+							<div class="pop_goods_title">Red New Year Sweaters</div>
+							<div class="pop_goods_price">price:<span>10 000KZT</span></div>
+							<div class="pop_goods_char">
+								<span>Red, comfartable sweaters</span>
+								<span>Can be ordered for man and woman</span>
+							</div>
+							<div class="soc">
+								<a href="#"><img src="img/ic3.png"></a>
+								<a href="#"><img src="img/ic1.png"></a>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">Cute Sweater</div>
+						<div class="pop_goods_price">price:<span>12000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p4.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">Water energy sweater</div>
+						<div class="pop_goods_price">price:<span>11000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p6.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">"For Feminine"Sweater</div>
+						<div class="pop_goods_price">price:<span>15000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p3.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">"Happy smile" Sweater</div>
+						<div class="pop_goods_price">price:<span>10000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p2.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">Cute Pink Sweater</div>
+						<div class="pop_goods_price">price:<span>10500</span></div>
+						<div class="pop_goods_img"><img src="img/order/p7.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">Classic Sweater</div>
+						<div class="pop_goods_price">price:<span>11000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p5.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+				</ul>
+				<ul>
+					<li>
+						<div class="pop_main_goods_left">
+							<div class="pop_gallery">
+								<div class="pop_gallery_main">
+									<img src="img/order/p1.jpg">
+									<img src="img/order/p1_1.jpg">
+									<img src="img/order/p1_2.jpg">
+								</div>
+								<div class="pop_gallery_prev">
+									<span><img src="img/order/p1.jpg"></span>
+									<span><img src="img/order/p1_1.jpg"></span>
+									<span><img src="img/order/p1_2.jpg"></span>
+								</div>
+							</div>
+						</div>
+						<div class="pop_main_goods_right">
+							<div class="pop_goods_title">Red New Year Sweaters</div>
+							<div class="pop_goods_price">price:<span>10 000KZT</span></div>
+							<div class="pop_goods_char">
+								<span>Red, comfartable sweaters</span>
+								<span>Can be ordered for man and woman</span>
+							</div>
+							<div class="soc">
+								<a href="#"><img src="img/ic3.png"></a>
+								<a href="#"><img src="img/ic1.png"></a>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">Cute Sweater</div>
+						<div class="pop_goods_price">price:<span>12000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p4.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">Water energy sweater</div>
+						<div class="pop_goods_price">price:<span>11000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p6.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">"For Feminine"Sweater</div>
+						<div class="pop_goods_price">price:<span>15000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p3.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">"Happy smile" Sweater</div>
+						<div class="pop_goods_price">price:<span>10000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p2.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">Cute Pink Sweater</div>
+						<div class="pop_goods_price">price:<span>10500</span></div>
+						<div class="pop_goods_img"><img src="img/order/p7.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">Classic Sweater</div>
+						<div class="pop_goods_price">price:<span>11000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p5.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+				</ul>
+				<ul>
+					<li>
+						<div class="pop_main_goods_left">
+							<div class="pop_gallery">
+								<div class="pop_gallery_main">
+									<img src="img/order/p1.jpg">
+									<img src="img/order/p1_1.jpg">
+									<img src="img/order/p1_2.jpg">
+								</div>
+								<div class="pop_gallery_prev">
+									<span><img src="img/order/p1.jpg"></span>
+									<span><img src="img/order/p1_1.jpg"></span>
+									<span><img src="img/order/p1_2.jpg"></span>
+								</div>
+							</div>
+						</div>
+						<div class="pop_main_goods_right">
+							<div class="pop_goods_title">Red New Year Sweaters</div>
+							<div class="pop_goods_price">price:<span>10 000KZT</span></div>
+							<div class="pop_goods_char">
+								<span>Red, comfartable sweaters</span>
+								<span>Can be ordered for man and woman</span>
+							</div>
+							<div class="soc">
+								<a href="#"><img src="img/ic3.png"></a>
+								<a href="#"><img src="img/ic1.png"></a>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">Cute Sweater</div>
+						<div class="pop_goods_price">price:<span>12000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p4.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">Water energy sweater</div>
+						<div class="pop_goods_price">price:<span>11000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p6.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">"For Feminine"Sweater</div>
+						<div class="pop_goods_price">price:<span>15000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p3.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">"Happy smile" Sweater</div>
+						<div class="pop_goods_price">price:<span>10000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p2.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">Cute Pink Sweater</div>
+						<div class="pop_goods_price">price:<span>10500</span></div>
+						<div class="pop_goods_img"><img src="img/order/p7.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">Classic Sweater</div>
+						<div class="pop_goods_price">price:<span>11000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p5.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+				</ul>
+				<ul>
+					<li>
+						<div class="pop_main_goods_left">
+							<div class="pop_gallery">
+								<div class="pop_gallery_main">
+									<img src="img/order/p1.jpg">
+									<img src="img/order/p1_1.jpg">
+									<img src="img/order/p1_2.jpg">
+								</div>
+								<div class="pop_gallery_prev">
+									<span><img src="img/order/p1.jpg"></span>
+									<span><img src="img/order/p1_1.jpg"></span>
+									<span><img src="img/order/p1_2.jpg"></span>
+								</div>
+							</div>
+						</div>
+						<div class="pop_main_goods_right">
+							<div class="pop_goods_title">Red New Year Sweaters</div>
+							<div class="pop_goods_price">price:<span>10 000KZT</span></div>
+							<div class="pop_goods_char">
+								<span>Red, comfartable sweaters</span>
+								<span>Can be ordered for man and woman</span>
+							</div>
+							<div class="soc">
+								<a href="#"><img src="img/ic3.png"></a>
+								<a href="#"><img src="img/ic1.png"></a>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">Cute Sweater</div>
+						<div class="pop_goods_price">price:<span>12000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p4.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">Water energy sweater</div>
+						<div class="pop_goods_price">price:<span>11000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p6.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">"For Feminine"Sweater</div>
+						<div class="pop_goods_price">price:<span>15000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p3.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">"Happy smile" Sweater</div>
+						<div class="pop_goods_price">price:<span>10000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p2.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">Cute Pink Sweater</div>
+						<div class="pop_goods_price">price:<span>10500</span></div>
+						<div class="pop_goods_img"><img src="img/order/p7.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
+					</li>
+					<li>
+						<div class="pop_goods_title">Classic Sweater</div>
+						<div class="pop_goods_price">price:<span>11000</span></div>
+						<div class="pop_goods_img"><img src="img/order/p5.jpg"></div>
+						<div class="pop_goods_desc">Very comfartable and beatiful sweter, can be best present</div>
 					</li>
 				</ul>
 			</div>
@@ -54,7 +378,5 @@
 	<script src="js/script_s.js"></script>
 	<script src="js/fancybox/jquery.fancybox.js"></script>
 	<script src="js/scripts.js"></script>
-	
-	
-</body>
+	</body>
 </html>
