--- a/order.html
+++ b/order.html
@@ -14,8 +14,8 @@
 			<nav>
 				<a href="index.html">Home</a>
 				<a href="about.html">About</a>
-				<a class="active" href="products.html">Products</a>
-				<a href="#">Order</a>
+				<a href="products.html">Products</a>
+				<a class="active" href="order.html">Order</a>
 				<a href="contacts.html">Contacts</a>
 			</nav>
 		</div>
@@ -374,6 +374,19 @@
 			<p>CALL NOW!</p>
 		</div>
 	</section>
+	<!--<div class="popup">
+		<div class="close"></div>
+		<div class="popup_title">Red New Year Sweater</div>
+		<div clas="popup_content">
+			<div class="popup_img"><img src="img/order/p1.jpg"></div>
+			<div class="popup_text">
+				<div class="popup_category">Sweaters</div>
+				<div class="popup_goods_title">Handmade warm sweaters with love</div>
+				<div class="price">price:<span>11000</span></div>
+			</div>
+		</div>
+	</div>
+	<div class="bg_popup"></div>-->
 	<script src="js/jquery-1.7.2.min.js"></script>
 	<script src="js/script_s.js"></script>
 	<script src="js/fancybox/jquery.fancybox.js"></script>
