--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 				<a href="index.html">Home</a>
 				<a class="active" href="about.html">About</a>
 				<a href="products.html">Products</a>
-				<a href="#">Order</a>
+				<a href="order.html">Order</a>
 				<a href="contacts.html">Contacts</a>
 			</nav>
 		</div>
