--- a/contacts.html
+++ b/contacts.html
@@ -15,7 +15,7 @@
 				<a href="index.html">Home</a>
 				<a href="about.html">About</a>
 				<a href="products.html">Products</a>
-				<a href="#">Order</a>
+				<a href="order.html">Order</a>
 				<a class="active" href="contacts.html">Contacts</a>
 			</nav>
 		</div>
